Revision history for Perl extension Udev-FFI

{{$NEXT}}

0.104000 2019-06-12T13:38:09Z
    - get_entries_all improved

0.103000 2019-02-08T15:49:32Z
    - remove IPC::Cmd
    - add File::Which

0.102001 2019-02-03T22:06:55Z
    - improve error handling

0.102000 2018-02-02T21:01:31Z
    - improve documentation
    - Module::Build::Tiny -> Module::Build

0.101001 2018-01-26T06:19:02Z
    - fix small memory leak in Udev::FFI::Enumerate

0.101000 2018-01-24T19:58:35Z
    - save reference to udev object in device, enumerate & monitor objects

0.100000 2018-01-12T15:25:28Z
    - fix get_entries bug

0.099006 2018-01-05T09:43:11Z
    - improve documentation

0.099005 2017-12-19T20:45:03Z
    - fix major, minor and makedev behavior

0.099004 2017-12-16T13:51:52Z
    - improve documentation

0.099003 2017-12-14T15:25:28Z
    - improve error handling

0.099002 2017-12-10T20:59:47Z
    - improve documentation

0.099001 2017-11-23T21:17:15Z
    - fix typo in test

0.099000 2017-11-22T21:58:27Z
    - add old libudev support

0.098005 2017-10-06T11:57:04Z
    - update configure in cpanfile

0.098004 2017-10-05T22:38:49Z
    - fix test

0.098003 2017-10-04T09:59:32Z
    - test is libudev exists
    - try Module::Build::Tiny

0.098000 2017-08-10T13:02:22Z
    - fix udev monitor poll behavior