@@ -67,7 +67,7 @@
          "web" : "https://github.com/Ilya33/udev-ffi"
       }
    },
-   "version" : "0.104000",
+   "version" : "0.104001",
    "x_authority" : "cpan:ILUX",
    "x_contributors" : [
       "Mohammad S Anwar <mohammad.anwar@yahoo.com>"
