@@ -15,7 +15,7 @@ use Udev::FFI::Monitor;
 use Udev::FFI::Enumerate;
 
 
-$Udev::FFI::VERSION = '0.104000';
+$Udev::FFI::VERSION = '0.104001';
 
 
 
